k8s/deployment.yaml
# Deployment da Aplicação
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversao-temperatura
spec:
  selector:
    matchLabels:
      app: conversao-temperatura
  template:
    metadata:
      labels:
        app: conversao-temperatura
    spec:
      containers:
        - name: conversao-temperatura
          image: giozandonai/conversao-temperatura:v1
