k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversao-temperatura
spec:  
  selector:
    app: conversao-temperatura
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
